[package]
name = "ccss"
version = "0.1.0"
edition = "2021"
description = "Const CSS parser"
repository = "https://github.com/frender-rs/ccss"
license = "MIT OR Apache-2.0"

[dependencies]
konst = { version = "0.3.9", features = ["iter"], default-features = false }

[dev-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"

[features]
alloc = []

[package.metadata.docs.rs]
all-features = true
